happy single point drawn

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,9 @@
         "math.h": "c",
         "fg_version.h": "c",
         "fg_callback_macros.h": "c",
-        "dense": "cpp"
+        "dense": "cpp",
+        "fft": "cpp",
+        "openglsupport": "cpp",
+        "numeric": "cpp"
     }
 }
