--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,10 +20,10 @@
 			},
 			"presentation": {
 				"echo": true,
-				"reveal": "always",
+				"reveal": "silent",
 				"focus": false,
 				"panel": "shared",
-				"showReuseMessage": true,
+				"showReuseMessage": false,
 				"clear": true
 			},
 			"detail": "compiler: /usr/bin/g++"
