--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -92,6 +92,7 @@
         "typeinfo": "cpp",
         "valarray": "cpp",
         "variant": "cpp",
-        "bvh": "cpp"
+        "bvh": "cpp",
+        "eulerangles": "cpp"
     }
 }
