wip fly camera and other stuff idk

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -93,6 +93,14 @@
         "valarray": "cpp",
         "variant": "cpp",
         "bvh": "cpp",
-        "eulerangles": "cpp"
+        "eulerangles": "cpp",
+        "adolcforward": "cpp",
+        "alignedvector3": "cpp",
+        "autodiff": "cpp",
+        "iterativesolvers": "cpp",
+        "nonlinearoptimization": "cpp",
+        "numericaldiff": "cpp",
+        "sparseextra": "cpp",
+        "specialfunctions": "cpp"
     }
 }
