fixed build on windows

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -105,6 +105,7 @@
         "csignal": "cpp",
         "any": "cpp",
         "codecvt": "cpp",
-        "cassert": "cpp"
+        "cassert": "cpp",
+        "GLAD.C": "cpp"
     }
 }
