--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,7 @@ include(cmake/glfw.cmake.in)
 include(cmake/spdlog.cmake.in)
 include(cmake/imgui.cmake.in)
 include(cmake/entt.cmake.in)
+include(cmake/libspng.cmake.in)
 
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
@@ -47,4 +48,4 @@ endif()
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-target_link_libraries(app glfw ${OPENGL_LIBRARIES} spdlog imgui EnTT)
+target_link_libraries(app glfw ${OPENGL_LIBRARIES} spdlog imgui EnTT spng)
