evil matrix yoda

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -106,6 +106,7 @@
         "any": "cpp",
         "codecvt": "cpp",
         "cassert": "cpp",
-        "GLAD.C": "cpp"
+        "GLAD.C": "cpp",
+        "*.ipp": "cpp"
     }
 }
