--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,7 @@ include(cmake/spdlog.cmake.in)
 include(cmake/imgui.cmake.in)
 include(cmake/entt.cmake.in)
 include(cmake/libspng.cmake.in)
+include(cmake/cxxopts.cmake.in)
 
 set(OpenGL_GL_PREFERENCE GLVND)
 find_package(OpenGL REQUIRED)
@@ -56,4 +57,4 @@ endif()
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
 
-target_link_libraries(app glfw ${OPENGL_LIBRARIES} spdlog imgui EnTT spng)
+target_link_libraries(app glfw ${OPENGL_LIBRARIES} spdlog imgui EnTT spng cxxopts)
