--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,24 +5,20 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "C++ Launch",
-            "type": "cppdbg",
+            "name": "(Windows) Launch",
+            "type": "cppvsdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/build/app",
+            "program": "${workspaceFolder}/build/app.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
             "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": false
-                }
-            ],
-            "preLaunchTask": "CMake: build"
+            "console": "integratedTerminal",
+            "logging": {
+                "moduleLoad": false,
+                "engineLogging": false
+            },
+            "preLaunchTask": "CMake: build",
         }
     ]
 }
