--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,17 +8,66 @@
 			"targets": [
 				"all"
 			],
-			"group": "build",
-			"problemMatcher": ["$gcc"],
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": [
+				"$msCompile"
+			],
 			"presentation": {
 				"echo": true,
 				"reveal": "always",
 				"focus": false,
-				"panel": "shared",
-				"showReuseMessage": true,
+				"panel": "dedicated",
+				"showReuseMessage": false,
 				"clear": true
 			},
-			"detail": "CMake template build task"
+			"icon": {
+				"light": "resources/light/build.svg",
+				"dark": "resources/dark/build.svg"
+			},
+			"detail": "CMake template build task",
+			"dependsOn": []
+		},
+		{
+			"type": "cmake",
+			"label": "CMake: configure",
+			"command": "configure",
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "dedicated",
+				"showReuseMessage": false,
+				"clear": true
+			},
+			"icon": {
+				"light": "resources/light/configure.svg",
+				"dark": "resources/dark/configure.svg"
+			},
+			"detail": "CMake template configure task"
+		},
+		// Submodule update
+		{
+			"type": "shell",
+			"label": "Update submodules",
+			"command": "git submodule update --init --recursive",
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "dedicated",
+				"showReuseMessage": false,
+				"clear": true
+			},
+			"icon": {
+				"light": "resources/light/git.svg",
+				"dark": "resources/dark/git.svg"
+			},
+			"detail": "Update submodules"
 		}
 	]
 }
