--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,32 +2,78 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-			"type": "cppbuild",
-			"label": "C/C++: Build Main",
-			"command": "cmake",
-			"args": [
-				"--build", "build",
-				"-j"
-			],
-			"options": {
-				"cwd": "${workspaceFolder}"
-			},
-			"problemMatcher": [
-				"$gcc"
+			"type": "cmake",
+			"label": "CMake: build",
+			"command": "build",
+			"targets": [
+				"all"
 			],
 			"group": {
 				"kind": "build",
 				"isDefault": true
 			},
+			"problemMatcher": [
+				"$msCompile"
+			],
 			"presentation": {
 				"echo": true,
-				"reveal": "silent",
+				"reveal": "always",
 				"focus": false,
-				"panel": "shared",
+				"panel": "dedicated",
 				"showReuseMessage": false,
 				"clear": true
 			},
-			"detail": "compiler: /usr/bin/g++"
+			"icon": {
+				"light": "resources/light/build.svg",
+				"dark": "resources/dark/build.svg"
+			},
+			"detail": "CMake template build task",
+			"dependsOn": [
+				"Clear terminal"
+			]
+		},
+		{
+			"type": "cmake",
+			"label": "CMake: configure",
+			"command": "configure",
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "dedicated",
+				"showReuseMessage": false,
+				"clear": true
+			},
+			"icon": {
+				"light": "resources/light/configure.svg",
+				"dark": "resources/dark/configure.svg"
+			},
+			"detail": "CMake template configure task"
+		},
+		{
+			"type": "shell",
+			"label": "Update submodules",
+			"command": "git submodule update --init --recursive",
+			"problemMatcher": [],
+			"presentation": {
+				"echo": true,
+				"reveal": "always",
+				"focus": false,
+				"panel": "dedicated",
+				"showReuseMessage": false,
+				"clear": true
+			},
+			"icon": {
+				"light": "resources/light/git.svg",
+				"dark": "resources/dark/git.svg"
+			},
+			"detail": "Update submodules"
+		},
+		{
+			"label": "Clear terminal",
+			"command": "${command:workbench.action.terminal.clear}",
+			"problemMatcher": []
 		}
 	]
 }
